--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -1,6 +1,7 @@
 FROM docker:latest
 RUN apk add --no-cache py-pip
 RUN mkdir /tests
-COPY requirements.txt ./tests
+WORKDIR /tests
+COPY requirements.txt ./
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt 
