--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,22 +58,30 @@ test:
     services: 
         - redis
     script:
-        - cd api
         - pytest -p no:cacheprovider tests
 
-push:
+push-api:
+    stage: push
+    services:
+        - docker:dind
+    script:
+        - docker pull $API_TEST_IMAGE || true
+        - docker push $API_IMAGE
+
+push-flask:
     stage: push
     services:
         - docker:dind
     script:
         - docker pull $FLASK_TEST_IMAGE || true
-        - docker pull $NGINX_TEST_IMAGE || true
-        - docker pull $API_TEST_IMAGE || true
-        - docker tag $API_TEST_IMAGE $API_IMAGE 
-        - docker tag $FLASK_TEST_IMAGE $FLASK_IMAGE
-        - docker tag $NGINX_TEST_IMAGE $NGINX_IMAGE
-        - docker push $API_IMAGE
         - docker push $FLASK_IMAGE
+
+push-nginx:
+    stage: push
+    services:
+        - docker:dind
+    script:
+        - docker pull $NGINX_TEST_IMAGE || true
         - docker push $NGINX_IMAGE
 
 
