--- a/deployment/nginx-deployment.yaml
+++ b/deployment/nginx-deployment.yaml
@@ -18,5 +18,6 @@ spec:
       containers:
         - name: nginx-container
           image: registry.gitlab.com/lucabrena/pss_assignment_1/deploy/nginx
+          imagePullPolicy: Always
           ports:
             - containerPort: 80
