Test stage runs only when pushing from development branch

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -67,6 +67,8 @@ test:
         - ''
     services: 
         - redis
+    only:
+        - development
     script:
         - pytest -p no:cacheprovider tests
 
