--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -112,9 +112,9 @@ release-api:
     only:
         - kubernetes
     script:
-        - docker pull $API_IMAGE:dev
-        - docker tag $API_IMAGE:dev $API_DEPLOY_IMAGE:latest
-        - docker push $API_DEPLOY_IMAGE:latest
+        - docker pull $API_IMAGE:dev || true
+        - docker tag $API_IMAGE:dev $API_IMAGE:latest
+        - docker push $API_IMAGE:latest
 
 release-flask:
     stage: release
@@ -123,9 +123,9 @@ release-flask:
     only:
         - kubernetes
     script:
-        - docker pull $FLASK_IMAGE:dev
-        - docker tag $FLASK_IMAGE:dev $FLASK_DEPLOY_IMAGE:latest
-        - docker push $FLASK_DEPLOY_IMAGE:latest
+        - docker pull $FLASK_IMAGE:dev || true
+        - docker tag $FLASK_IMAGE:dev $FLASK_IMAGE:latest
+        - docker push $FLASK_IMAGE:latest
 
 release-nginx:
     stage: release
@@ -134,9 +134,9 @@ release-nginx:
     only:
         - kubernetes
     script:
-        - docker pull $NGINX_IMAGE:dev
-        - docker tag $NGINX_IMAGE:dev $NGINX_DEPLOY_IMAGE:latest
-        - docker push $NGINX_DEPLOY_IMAGE:latest
+        - docker pull $NGINX_IMAGE:dev || true
+        - docker tag $NGINX_IMAGE:dev $NGINX_IMAGE:latest
+        - docker push $NGINX_IMAGE:latest
 
 
 
