--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -4,6 +4,7 @@ metadata:
   name: ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
