--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -3,13 +3,12 @@ kind: Ingress
 metadata:
   name: ingress
   annotations:
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
-    kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
-  - host: prosviso.com
-    http:
+  - http:
       paths:
       - path: /*
         backend:
