--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,6 +15,7 @@ stages:
     - test
     - push
     - release
+    - deploy
 
 build-api:
     stage: build
@@ -137,6 +138,21 @@ release-nginx:
         - docker pull $NGINX_IMAGE:dev
         - docker tag $NGINX_IMAGE:dev $NGINX_IMAGE:latest
         - docker push $NGINX_IMAGE:latest
+
+deploy:
+    stage: deploy
+    services:
+        - alpine
+    only:
+        - kubernetes
+    environment:
+        - production
+    before_script:
+        - ''
+    script:
+        - apk add --update ca-certificates && apk add --update -t deps curl && curl -L https://storage.googleapis.com/kubernetes-release/release/v1.12.1/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl
+        - cd deployment/
+        - kubectl get all
 
 
 
