--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,7 @@ stages:
     - build
     - test
     - push
-    - release
+    # - release
     - deploy
 
 build-api:
@@ -106,38 +106,38 @@ push-nginx:
         - docker tag $NGINX_IMAGE:$CI_COMMIT_SHA $NGINX_IMAGE:dev
         - docker push $NGINX_IMAGE:dev
 
-release-api:
-    stage: release
-    services:
-        - docker:dind
-    only:
-        - kubernetes
-    script:
-        - docker pull $API_IMAGE:dev
-        - docker tag $API_IMAGE:dev $API_IMAGE:latest
-        - docker push $API_IMAGE:latest
+# release-api:
+#     stage: release
+#     services:
+#         - docker:dind
+#     only:
+#         - kubernetes
+#     script:
+#         - docker pull $API_IMAGE:dev
+#         - docker tag $API_IMAGE:dev $API_IMAGE:latest
+#         - docker push $API_IMAGE:latest
 
-release-flask:
-    stage: release
-    services:
-        - docker:dind
-    only:
-        - kubernetes
-    script:
-        - docker pull $FLASK_IMAGE:dev
-        - docker tag $FLASK_IMAGE:dev $FLASK_IMAGE:latest
-        - docker push $FLASK_IMAGE:latest
+# release-flask:
+#     stage: release
+#     services:
+#         - docker:dind
+#     only:
+#         - kubernetes
+#     script:
+#         - docker pull $FLASK_IMAGE:dev
+#         - docker tag $FLASK_IMAGE:dev $FLASK_IMAGE:latest
+#         - docker push $FLASK_IMAGE:latest
 
-release-nginx:
-    stage: release
-    services:
-        - docker:dind
-    only:
-        - kubernetes
-    script:
-        - docker pull $NGINX_IMAGE:dev
-        - docker tag $NGINX_IMAGE:dev $NGINX_IMAGE:latest
-        - docker push $NGINX_IMAGE:latest
+# release-nginx:
+#     stage: release
+#     services:
+#         - docker:dind
+#     only:
+#         - kubernetes
+#     script:
+#         - docker pull $NGINX_IMAGE:dev
+#         - docker tag $NGINX_IMAGE:dev $NGINX_IMAGE:latest
+#         - docker push $NGINX_IMAGE:latest
 
 deploy:
     stage: deploy
@@ -151,6 +151,10 @@ deploy:
     script:
         - apk add --update ca-certificates && apk add --update -t deps curl && curl -L https://storage.googleapis.com/kubernetes-release/release/v1.12.1/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl
         - cd deployment/
+        - kubectl config set-cluster prova --server="$KUBE_URL" --insecure-skip-tls-verify=true
+        - kubectl config set-credentials admin --username="$KUBE_USER" --password="$KUBE_PASSWORD"
+        - kubectl config set-context default --cluster=prova --user=admin
+        - kubectl config use-context default
         - kubectl get all
 
 
