--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -151,10 +151,10 @@ deploy:
     script:
         - apk add --update ca-certificates && apk add --update -t deps curl && curl -L https://storage.googleapis.com/kubernetes-release/release/v1.12.1/bin/linux/amd64/kubectl -o /usr/local/bin/kubectl && chmod +x /usr/local/bin/kubectl
         - cd deployment/
-        - kubectl config set-cluster prova --server="$KUBE_URL" --insecure-skip-tls-verify=true
-        - kubectl config set-credentials admin --username="$KUBE_USER" --password="$KUBE_PASSWORD"
-        - kubectl config set-context default --cluster=prova --user=admin
-        - kubectl config use-context default
+        - kubectl config set-cluster prova --server="$KUBE_URL" --certificate-authority="$KUBE_CA_PEM_FILE"
+        - kubectl config set-credentials admin --username="$KUBE_USER" --password="$KUBE_PASSWORD" --token="$KUBE_TOKEN"
+        - kubectl config set-context context-prova --cluster=prova --user=admin --namespace=default
+        - kubectl config use-context context-prova
         - kubectl get all
 
 
