Trying kubectl apply

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -157,6 +157,8 @@ deploy:
         - echo KUBE_TOKEN=$KUBE_TOKEN
         - echo KUBE_NAMESPACE=$KUBE_NAMESPACE
 
+        - sed -i -e "s|__DOCKER_IMAGE__|${FLASK_IMAGE}:${CI_COMMIT_SHA}|g" deployment/flask-deployment.yaml
+
         - kubectl config set-cluster "$CI_PROJECT_ID" --server="$KUBE_URL" --certificate-authority="$KUBE_CA_PEM_FILE"
         - kubectl config set-credentials "$CI_PROJECT_ID" --token="$KUBE_TOKEN"
         - kubectl config set-context "$CI_PROJECT_ID" --cluster="$CI_PROJECT_ID" --user="$CI_PROJECT_ID" --namespace="$KUBE_NAMESPACE"
